@@ -2,6 +2,7 @@ package main.app;
 
 import com.univocity.parsers.csv.CsvParser;
 import com.univocity.parsers.csv.CsvParserSettings;
+import org.w3c.dom.ls.LSOutput;
 
 import java.io.*;
 import java.nio.charset.StandardCharsets;
@@ -87,10 +88,13 @@ public class App {
         g811.filter_in(0,"ICICDDP19");
 
          g811.printgrille();
-        String[] basic_cols = new String[]{"Statut_Technique_Sinistre", "SKU", "Type_Indemnisation", "Statut_Technique_Sinistre_2", "Libellé_Garantie", "Critère_Identification_Bien_Garanti_2", "Critère_Identification_Bien_Garanti_6",
-                "Critère_Tarifaire_1", "Statut_Sogedep"};
+        String[] basic_cols = new String[]{"Statut_Technique_Sinistre", "SKU", "Type_Indemnisation", "Statut_Technique_Sinistre_2", "Libellé_Garantie",
+                                           "Critère_Identification_Bien_Garanti_2", "Critère_Identification_Bien_Garanti_6", "Critère_Tarifaire_1", "Statut_Sogedep"};
         String[] calc_cols = new String[] {"Signe Montant_Indemnité_Principale","Pourcentage Montant_Indemnité_Principale","Valeur Montant_Indemnité_Principale"};
-        String[] order = (String[]) arr_merge(g811.header,arr_concat(basic_cols,calc_cols));
+        System.out.println(Arrays.toString(g811.header));
+        System.out.println(Arrays.toString(arr_concat(basic_cols, calc_cols)));
+        Object[] tmp = arr_merge(g811.header,arr_concat(basic_cols,calc_cols));
+        String[] order =  Arrays.copyOf(tmp, tmp.length, String[].class);
 //        Node tree = new Node(grille, order);
 
 //        String name = "ICIMM101";
@@ -172,7 +176,7 @@ public class App {
         int len = sum_boolean(which);
         String[] out = new String[len];
         int j = 0;
-        for (int i = 0; i < len; i++) {
+        for (int i = 0; i < which.length; i++) {
             if (which[i]) {
                 out[j] = arr[i];
                 j++;
@@ -182,9 +186,7 @@ public class App {
     }
     public static DF.Col_types[] keep_from_array(DF.Col_types[] arr, boolean[] which) {
         int len = sum_boolean(which);
-        System.out.println("len "+ len);
         DF.Col_types[] out = new DF.Col_types[len];
-        System.out.println("lenvec "+ out.length);
 
         int j = 0;
         for (int i = 0; i < which.length; i++) {
@@ -253,7 +255,7 @@ public class App {
         return out;
     }
     public static Object[] unique_of(Object[] arr) {
-        Set<Object> hash = new LinkedHashSet<>(List.of(arr));
+        Set<Object> hash = new LinkedHashSet<>(Arrays.asList(Optional.ofNullable(arr).orElse(new String[0])));
         return hash.toArray(new Object[0]);
     }
     public static boolean[] unique_bool(Object[] arr) {
